# AiogramTemplate

./: .env.dist  .gitignore  README.md  app.py  pyproject.toml
data/: config.py
handlers/errors/: error_handler.py
utils/: notify_admins.py
utils/misc/: logging.py
