[tool.poetry]
name = "aiogramtemplate"
version = "0.1.0"
description = ""
authors = ["LagrangeH <maxsergeev39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "~=2.12"
environs = "^9.3.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
